--- a/build.gradle
+++ b/build.gradle
@@ -11,6 +11,9 @@ buildscript {
         //google services
         classpath 'com.google.gms:google-services:3.0.0'
 
+        classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.7.3'
+        classpath 'com.github.dcendents:android-maven-gradle-plugin:1.5'
+
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
@@ -26,5 +29,6 @@ allprojects {
 task clean(type: Delete) {
     delete rootProject.buildDir
 }
+
 
 
