--- a/database/src/main/AndroidManifest.xml
+++ b/database/src/main/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="com.kokaba.firebasemiyagi">
+          package="com.kokaba.rxfirebase">
 
     <application android:allowBackup="true"
                  android:label="@string/app_name"
